--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
       <div class="container text-center">
         <div class="row">
           <div class="col-lg-10 mx-auto">
-            <h2>Stylish Portfolio is the perfect theme for your next project!</h2>
-            <p class="lead mb-5">This theme features a flexible, UX friendly sidebar menu and stock photos from our friends at
-              <a href="https://unsplash.com/">Unsplash</a>!</p>
+            <h2>Como brindar tu ayuda en nombre de los que no hablan(animales)</h2>
+            <p class="lead mb-5">podes ayudarnos de diversas maneras
+              </p>
             <a class="btn btn-dark btn-xl js-scroll-trigger" href="#services">What We Offer</a>
           </div>
         </div>
