--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
         <div class="row">
           <div class="col-lg-10 mx-auto">
             <h2>Como brindar tu ayuda en nombre de los que no hablan(animales)</h2>
-            <p class="lead mb-5">podes ayudarnos de diversas maneras
-brindando comida
-adoptando
-ayudando a adoptar
-difundir los perros que estan en adopcion
+            <p class="lead mb-5">podes ayudarnos de diversas maneras: 
+brindando comida, 
+adoptando, 
+ayudando a adoptar, 
+difundir los perros que estan en adopcion, 
 y mucho mas
               </p>
             <a class="btn btn-dark btn-xl js-scroll-trigger" href="#services">What We Offer</a>
