--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@ y mucho mas
     <section class="content-section bg-primary text-white text-center" id="services">
       <div class="container">
         <div class="content-section-heading">
-          <h3 class="text-secondary mb-0">Services</h3>
-          <h2 class="mb-5">What We Offer</h2>
+          <h3 class="text-secondary mb-0">preguntanos lo que quieras saber de nosotros</h3>
+          <h2 class="mb-5">sobre que podes preguntarnos?</h2>
         </div>
         <div class="row">
           <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
